[gd_scene load_steps=9 format=3 uid="uid://bsy5tp410vo4n"]

[ext_resource type="Script" path="res://scenes/score_hud.gd" id="1_ou0rk"]
[ext_resource type="AudioStream" uid="uid://d22cu0rkdo37w" path="res://sounds/confirmation_002.ogg" id="2_qobif"]
[ext_resource type="AudioStream" uid="uid://clx3u5urw4fos" path="res://sounds/click_002.ogg" id="3_nwfqu"]

[sub_resource type="LabelSettings" id="LabelSettings_4ycr7"]
outline_size = 8
outline_color = Color(0.188235, 0.0862745, 0.129412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_66i53"]
font_size = 24
outline_size = 8
outline_color = Color(0.188235, 0.0862745, 0.129412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1208g"]
font_size = 32
outline_size = 8
outline_color = Color(0.188235, 0.0862745, 0.129412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_scbbx"]
font_size = 24
outline_size = 8
outline_color = Color(0.188235, 0.0862745, 0.129412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tfdo1"]
font_size = 32
font_color = Color(0.411765, 0.941176, 0.682353, 1)
outline_size = 8
outline_color = Color(0.0874, 0.19, 0.13015, 1)

[node name="ScoreHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ou0rk")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -109.0
offset_top = 16.0
offset_right = -64.0
offset_bottom = 39.0
grow_horizontal = 0
text = "v0.0.0"
label_settings = SubResource("LabelSettings_4ycr7")
horizontal_alignment = 2

[node name="ScoreTimerSection" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 16.0
offset_right = 96.0
offset_bottom = 73.0
grow_horizontal = 2

[node name="TimerContainer" type="VBoxContainer" parent="ScoreTimerSection"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_constants/separation = 3

[node name="Title" type="Label" parent="ScoreTimerSection/TimerContainer"]
layout_mode = 2
text = "Seconds Left"
label_settings = SubResource("LabelSettings_4ycr7")
horizontal_alignment = 1

[node name="Value" type="Label" parent="ScoreTimerSection/TimerContainer"]
layout_mode = 2
text = "60"
label_settings = SubResource("LabelSettings_66i53")
horizontal_alignment = 1

[node name="ScoreContainer" type="VBoxContainer" parent="ScoreTimerSection"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2

[node name="Title" type="Label" parent="ScoreTimerSection/ScoreContainer"]
layout_mode = 2
text = "Score"
label_settings = SubResource("LabelSettings_4ycr7")
horizontal_alignment = 1

[node name="Value" type="Label" parent="ScoreTimerSection/ScoreContainer"]
layout_mode = 2
text = "2608550"
label_settings = SubResource("LabelSettings_1208g")
horizontal_alignment = 1

[node name="StreakContainer" type="VBoxContainer" parent="ScoreTimerSection"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_constants/separation = 3

[node name="Title" type="Label" parent="ScoreTimerSection/StreakContainer"]
layout_mode = 2
text = "Streak"
label_settings = SubResource("LabelSettings_4ycr7")
horizontal_alignment = 1

[node name="Value" type="Label" parent="ScoreTimerSection/StreakContainer"]
layout_mode = 2
text = "x0"
label_settings = SubResource("LabelSettings_66i53")
horizontal_alignment = 1

[node name="StartSection" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 16.0
offset_right = 20.0
offset_bottom = 56.0
grow_horizontal = 2
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="StartSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shoot the target to begin."
label_settings = SubResource("LabelSettings_scbbx")
horizontal_alignment = 1

[node name="Value" type="Label" parent="StartSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "The game will last 60 seconds."
label_settings = SubResource("LabelSettings_4ycr7")
horizontal_alignment = 1

[node name="FinalScore" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 16.0
offset_right = 20.0
offset_bottom = 56.0
grow_horizontal = 2

[node name="Title" type="Label" parent="FinalScore"]
layout_mode = 2
text = "Final Score - 60 Second Game"
label_settings = SubResource("LabelSettings_4ycr7")
horizontal_alignment = 1

[node name="Value" type="Label" parent="FinalScore"]
layout_mode = 2
text = "2608550"
label_settings = SubResource("LabelSettings_tfdo1")
horizontal_alignment = 1

[node name="FinishedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qobif")

[node name="TickerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_nwfqu")
